[package]
name = "wgpu_glyph"
version = "0.8.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A fast text renderer for wgpu, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "wgpu", "text"]
repository = "https://github.com/hecrj/wgpu_glyph"
documentation = "https://docs.rs/wgpu_glyph"
readme = "README.md"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev="0fb47262eaf8a7fe13c3175de599ec1014811381" }
glyph_brush = "0.6"
log = "0.4"
zerocopy = "0.3"

[dev-dependencies]
env_logger = "0.7"
winit = "0.22"
futures = "0.3"
